# cpp_parallelizing_critical_path

./: CMakeLists.txt  Makefile  README.md
include/: market_data.h
src/: benchmark.cpp  parallel_for_ema.cpp  race_condition_demo.cpp  scheduling_strategies.cpp  thread_local_storage.cpp
